--- a/potifolio/src/infoBasicas.css
+++ b/potifolio/src/infoBasicas.css
@@ -1,20 +1,48 @@
 .sobre{
     margin-top: 200px;
-    background-color: rgba(0, 0, 0, 0.719);
+    background-color: rgba(241, 241, 241, 0.267);
     border-radius: 10px;
     height: 300px;
 }
 .sobre-dentro{
     width: 400px;
-    background-color: rgb(206, 206, 212);
+    background-color: rgb(245, 245, 245);
     padding: 2%;
     border-radius: 10px;
+    margin: 30px;
 }
+
+.images img {
+    margin: 10px;
+    transition: 0.5s;
+   
+}
+
+.images img:hover  {
+    transform: scale(1.1);
+    
+}
+
+
 .perfil{
     object-fit: contain;
     height: 400px;
     border-radius: 10px;
+    transition: 0.5s;
+}
+
+.perfil:hover{
+    transform: scale(1.02);
 }
 .apresentacao{
-    margin-top: 80px;
+    margin-top: 150px;
+    padding: 10px;
+    
+ 
+}
+
+.perfil {
+    -webkit-box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.75);
 }
